[package]
name = "rustingwithngrok"
version = "0.1.0"
edition = "2021"
authors = ["Mike Lloyd"]

[dependencies]
actix = "0.13.0"
actix-web = { version = "4.3.1", features = ["actix-macros"] }
actix-web-actors = "4.2.0"
askama = "0.12.0"
askama_actix = "0.14.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
