[package]
name = "rustingwithngrok"
version = "0.2.0"
edition = "2021"
authors = ["Mike Lloyd"]

[dependencies]
anyhow = "1.0.70"
askama = "0.12.0"
askama_axum = "0.3.0"
axum = { version = "0.6.12", features = ["ws", "headers"] }
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
